[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
tap = "1.0.1"
colored = { version = "2.0" }
bevy-inspector-egui = { version = "0.13.0", optional = true }
itertools = "0.10.5"
nanorand = "0.7.0"
serde = { version = "1.0.145", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["debug"]
debug = ["bevy-inspector-egui"]
